[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gas_plant"
version = "0.1.0"
description = "Surrogate power-generation models for gas-fired and combined-cycle plants, derived from ThermoPower."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
andes = ["andes"]

[tool.setuptools.packages.find]
include = ["gas_plant", "gas_plant.*", "gas_plant_andes", "gas_plant_andes.*"]

[tool.setuptools.package-data]
gas_plant = ["data/*.csv"]
